kubernetes-ops/eventual-hub/components/jupyterhub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: hub
  name: jupyterhub
spec:
  replicas: 1 # https://github.com/jupyterhub/jupyterhub/issues/1932
  selector:
    matchLabels:
      app: jupyterhub
      component: hub
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jupyterhub
        component: hub
        hub.jupyter.org/network-access-proxy-api: "true"
        hub.jupyter.org/network-access-proxy-http: "true"
        hub.jupyter.org/network-access-singleuser: "true"
    spec:
      containers:
        - name: hub
          image: localhost:5001/eventual/jupyterhub:latest
          command:
            - jupyterhub
            - --config
            - /etc/jupyterhub/config/jupyterhub_config.py
            - --upgrade-db
          ports:
            - containerPort: 8081
              name: hub
          resources:
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - mountPath: /etc/jupyterhub/config/
              name: config
            - mountPath: /srv/jupyterhub
              name: state-dir
          livenessProbe:
            initialDelaySeconds: 120
            tcpSocket:
              port: hub
          readinessProbe:
            tcpSocket:
              port: hub
      serviceAccountName: jupyterhub-hub
      volumes:
        - name: config
          configMap:
            name: jupyterhub-config
        - name: hub-ca
          secret:
            secretName: hub-ca
        - name: notebooks-ca
          secret:
            secretName: notebooks-ca
        - name: proxy-api-ca
          secret:
            secretName: proxy-api-ca
        - name: proxy-client-ca
          secret:
            secretName: proxy-client-ca
        - name: services-ca
          secret:
            secretName: services-ca
        - name: state-dir
          emptyDir: {}
