kubernetes-ops/eventual-hub/components/jupyterhub/db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jupyterhub-postgresql-service
  name: jupyterhub-postgresql-service
spec:
  externalName: jupyterhub.czphfuexyzo3.us-west-2.rds.amazonaws.com
  selector:
    app: jupyterhub-postgresql-service
  type: ExternalName
status:
  loadBalancer: {}
